@@ -73,42 +73,50 @@ AC_PROG_CXX
 AC_CHECK_PROG(LD,ld,ld,)
 test "$LD" || AC_ERROR(ld not found)
 
-dnl  --- Find the Linux kernel, at least the headers ---
- 
-AC_SUBST(KSRC)
-KSRC=/lib/modules/`uname -r`/build
-AC_ARG_WITH(linux, [  --with-linux=dir             Path to Linux source tree], KSRC=$withval) 
-KINC=$KSRC/include
-AC_SUBST(KINC)
- 
-if test ! -f $KINC/linux/autoconf.h; then
-  AC_MSG_ERROR(no suitably configured kernel include tree found)
+AC_ARG_WITH(kernel-support, [  --with-kernel-support          Select if using CONFIG_OPROFILE],
+if test "$withval" = "yes"; then
+	OPROFILE_25=yes
 fi
+) 
 
-dnl  --- Get Linux kernel version and compile parameters ---
-
-AC_SUBST(KVERS)
-AC_MSG_CHECKING(for kernel version)
-dnl it's like this to handle mandrake's fubar version.h - bug #471448
-eval KVERS=`gcc -I$KINC -E -dM $KINC/linux/version.h | grep -w UTS_RELEASE | awk '{print $3}'`
-AC_MSG_RESULT($KVERS)
-case "$KVERS" in
-2.2.*|2.4.*|2.5.*) ;;
-*) AC_MSG_ERROR(Unsupported kernel version)
-esac
-
-dnl Check for the minimal kernel version supported
-AC_MSG_CHECKING(kernel version)
-AX_KERNEL_VERSION(2, 2, 10, <=, AC_MSG_RESULT("ok"), AC_MSG_ERROR("check html documentation install section"))
-
-
-AC_MSG_CHECKING(for kernel OProfile support)
-AX_COMPILE_OPTION(CONFIG_OPROFILE, OPROFILE_25=yes, OPROFILE_25=no)
-AX_COMPILE_OPTION(CONFIG_OPROFILE_MODULE, OPROFILE_25=yes, OPROFILE_25=$OPROFILE_25)
+if test "$OPROFILE_25" != "yes"; then
+	AC_MSG_CHECKING(for kernel OProfile support)
+	AX_COMPILE_OPTION(CONFIG_OPROFILE, OPROFILE_25=yes, OPROFILE_25=no)
+	AX_COMPILE_OPTION(CONFIG_OPROFILE_MODULE, OPROFILE_25=yes, OPROFILE_25=$OPROFILE_25)
+	AC_MSG_RESULT($OPROFILE_25)
+fi
 AC_SUBST(OPROFILE_25)
-AC_MSG_RESULT($OPROFILE_25)
-
+ 
 if test "$OPROFILE_25" = "no"; then
+ 
+	dnl  --- Find the Linux kernel, at least the headers ---
+ 
+	AC_SUBST(KSRC)
+	KSRC=/lib/modules/`uname -r`/build
+	AC_ARG_WITH(linux, [  --with-linux=dir             Path to Linux source tree], KSRC=$withval) 
+	KINC=$KSRC/include
+	AC_SUBST(KINC)
+	 
+	if test ! -f $KINC/linux/autoconf.h; then
+	  AC_MSG_ERROR(no suitably configured kernel include tree found)
+	fi
+
+	dnl  --- Get Linux kernel version and compile parameters ---
+
+	AC_SUBST(KVERS)
+	AC_MSG_CHECKING(for kernel version)
+	dnl it's like this to handle mandrake's fubar version.h - bug #471448
+	eval KVERS=`gcc -I$KINC -E -dM $KINC/linux/version.h | grep -w UTS_RELEASE | awk '{print $3}'`
+	AC_MSG_RESULT($KVERS)
+	case "$KVERS" in
+	2.2.*|2.4.*|2.5.*) ;;
+	*) AC_MSG_ERROR(Unsupported kernel version)
+	esac
+
+	dnl Check for the minimal kernel version supported
+	AC_MSG_CHECKING(kernel version)
+	AX_KERNEL_VERSION(2, 2, 10, <=, AC_MSG_RESULT("ok"), AC_MSG_ERROR("check html documentation install section"))
+
 	dnl Check if we need to build the module with extra flags
 	dnl FIXME this fix 2.5.19 and 2.5.20 build but perhaps its not the right way
 	AC_MSG_CHECKING([whether module compilation need -DMODULE])
