@@ -1,0 +1,32 @@
+#!/bin/sh
+# $Id$ 
+# COPYRIGHT (C) 2000 THE VICTORIA UNIVERSITY OF MANCHESTER and John Levon
+# This program is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation; either version 2 of the License, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along with
+# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
+# Place - Suite 330, Boston, MA 02111-1307, USA.
+#
+
+# FIXME: support different base dir ??
+ 
+if [ "$UID" != "0" ]; then
+	echo "Must be root to stop profiling." >&2
+	exit 1
+fi
+ 
+if test -f /var/lib/oprofile/lock; then
+	echo "Stopping profiling."
+	echo 0 >/dev/oprofile/enable
+fi
+
+# if profiler is not started consider as ok to try to stop it.
+exit 0
